H2O-scripts/hello-ingress-tls.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress-tls
spec:
  tls:
  - hosts:
      - hello.h2o-4-2395.h2o.vmware.com
    secretName: hello-selfsigned-cert-tls
  rules:
  - host: hello.h2o-4-2395.h2o.vmware.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-server
            port:
              number: 80
